# H2Powerlaw

./: .readthedocs.yaml  H2Powerlaw_Tutorial.ipynb  H2_Excitations_Tutorial.html  H2_Excitations_Tutorial.ipynb  LICENSE.md  README.md  setup.cfg  setup.py
H2Powerlaw/: H2Powerlaw.py  __init__.py  utils.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  plotting.rst  quickstart.rst
