[metadata]
name = H2Powerlaw
version = 0.5
author = Logan Jones
author_email = lojones@stsci.edu
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
description = Togi & Smith 2016 H2 excitation model
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = spectroscopy, infrared, molecular, gas, H2, rotational
classifiers = 
  Intended Audience :: Science/Research
  Topic :: Scientific/Engineering :: Astronomy
 

[options]
packages = find:
python_requires = >=3.10
setup_requires = setuptools_scm
install_requires =
    astropy>=6.0.0
    scipy>=1.12.0
    numpy>=1.26.3
    matplotlib>=3.8.2
    jupyterlab>=4.0.5


[options.extras_require]
test =
    pytest-astropy
docs =
    furo


[tool:pytest]
testpaths = "h2powerlaw" "docs"
doctest_plus = enabled
text_file_format = rst
# addopts = --doctest-rst


[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

